--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
 @media only screen and (max-width: 768px) {
   .container {
     max-width: 375px;
+    margin: 40px 24px auto;padding: 24px 12px;
   }
   .filters {
     margin-bottom: 16px;
